<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.SignIn"
    android:background="#202732" >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/editTextTextPersonName2"
                    android:layout_width="match_parent"
                    android:layout_height="58dp"
                    android:ems="10"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="@string/play_online" />

                <View
                    android:id="@+id/divider1"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#808080" />

                <LinearLayout
                    android:id="@+id/linearLayout1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="15dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/online3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="22dp"
                        android:text="@string/_3_mins"
                        android:textSize="12sp"
                        android:background="@drawable/button_rounded_border2"/>

                    <Button
                        android:id="@+id/online10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_10_mins"
                        android:textSize="12sp"
                        android:background="@drawable/button_rounded_border2"/>

                    <Button
                        android:id="@+id/online30"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_30_mins"
                        android:textSize="12sp"
                        android:background="@drawable/button_rounded_border2"/>

                    <Button
                        android:id="@+id/onlineNoTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/no_time"
                        android:textSize="12sp"
                        android:background="@drawable/button_rounded_border2"/>
                </LinearLayout>

                <TextView
                    android:id="@+id/TextPlayAI"
                    android:layout_width="match_parent"
                    android:layout_height="58dp"
                    android:ems="10"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="@string/play_against_computer" />

                <View
                    android:id="@+id/divider2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#808080" />

                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="15dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/playAI3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="22dp"
                        android:text="@string/_3_mins"
                        android:textSize="12sp"
                        android:background="@drawable/button_rounded_border2"/>

                    <Button
                        android:id="@+id/playAI10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_10_mins"
                        android:textSize="12sp"
                        android:background="@drawable/button_rounded_border2"/>

                    <Button
                        android:id="@+id/playAI30"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_30_mins"
                        android:textSize="12sp"
                        android:background="@drawable/button_rounded_border2"/>

                    <Button
                        android:id="@+id/playAINoTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/no_time"
                        android:textSize="12sp"
                        android:background="@drawable/button_rounded_border2"/>
                </LinearLayout>

                <TextView
                    android:id="@+id/TextFriends"
                    android:layout_width="match_parent"
                    android:layout_height="58dp"
                    android:ems="10"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="@string/friends" />

                <View
                    android:id="@+id/divider3"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#808080" />

                <LinearLayout
                    android:id="@+id/linearLayoutFriends"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/buttonSeeFriends"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="22dp"
                        android:minWidth="175dp"
                        android:text="@string/my_friends"
                        android:textSize="12sp"
                        android:background="@drawable/button_rounded_border2"/>

                    <Button
                        android:id="@+id/buttonPlayFriend"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minWidth="175dp"
                        android:text="@string/play_a_friend"
                        android:textSize="12sp"
                        android:background="@drawable/button_rounded_border2"/>
                </LinearLayout>

                <TextView
                    android:id="@+id/TextTournament"
                    android:layout_width="match_parent"
                    android:layout_height="58dp"
                    android:ems="10"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="@string/tournaments" />

                <View
                    android:id="@+id/divider4"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#808080" />

                <LinearLayout
                    android:id="@+id/linearLayoutTournaments"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="15dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/buttonJoinTournament"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="22dp"
                        android:minWidth="175dp"
                        android:text="@string/join_tournament"
                        android:textSize="12sp"
                        android:background="@drawable/button_rounded_border2"/>

                    <Button
                        android:id="@+id/buttonCreateTournament"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minWidth="170dp"
                        android:text="@string/create_tournament"
                        android:textSize="12sp"
                        android:background="@drawable/button_rounded_border2"/>
                </LinearLayout>

                <TextView
                    android:id="@+id/TextRecord"
                    android:layout_width="match_parent"
                    android:layout_height="58dp"
                    android:ems="10"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="@string/my_record" />

                <View
                    android:id="@+id/divider5"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#808080" />

                <Button
                    android:id="@+id/Record"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="32dp"
                    android:background="@drawable/button_rounded_border2"
                    android:text="@string/record"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/extras"
                    android:layout_width="match_parent"
                    android:layout_height="58dp"
                    android:ems="10"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="@string/extras" />

                <View
                    android:id="@+id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#808080" />

                <LinearLayout
                    android:id="@+id/linearLayoutExtras"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/shop"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="22dp"
                        android:minWidth="175dp"
                        android:text="@string/visit_shop"
                        android:textSize="12sp"
                        android:background="@drawable/button_rounded_border2"/>

                    <Button
                        android:id="@+id/inventary"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minWidth="175dp"
                        android:text="@string/my_inventory"
                        android:textSize="12sp"
                        android:background="@drawable/button_rounded_border2"/>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>